src/objects/MX_SB_MLT_cat_claim_center__mdt.object
<CustomObject>
    <description>Catalogos para sincronización de información de claim center  multiasistencia y salesforce</description>
    <fields>
        <fullName>MX_SB_MLT_Catalogos__c</fullName>
        <description>Nombre de catalogo al que pertenece el registro para multiasistencia</description>
        <label>Catalogos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ContactRole</fullName>
                    <default>true</default>
                    <label>ContactRole</label>
                </value>
                <value>
                    <fullName>LossType</fullName>
                </value>
                <value>
                    <fullName>MA_Insurance</fullName>
                </value>
                <value>
                    <fullName>MA_InsuranceMood</fullName>
                </value>
                <value>
                    <fullName>MA_PhoneType</fullName>
                </value>
                <value>
                    <fullName>MA_Product</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Estado__c</fullName>
        <description>Estado del registro para actualizaciones futuras para multiasistencia </description>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activo</fullName>
                    <default>true</default>
                    <label>Activo</label>
                </value>
                <value>
                    <fullName>Inactivo</fullName>
                </value>
                <value>
                    <fullName>Ya no se atiende</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Valor__c</fullName>
        <description>Valor del registro para su sincronización de información entre claim center y salesforce multiasistencia</description>
        <label>Valor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Catalogos Claim  Center</label>
    <pluralLabel>Catalogos Claim  Center</pluralLabel>
</CustomObject>